force-app/main/default/objects/QuestionnaireDetail__c/QuestionnaireDetail__c.object-meta.xml
<CustomObject>
    <label>アンケート詳細</label>
    <nameField>
        <displayFormat>QD-{000000}</displayFormat>
        <label>アンケート詳細名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>