force-app/main/default/objects/QuestionnaireDetail__c/fields/OfferRealEstateDocumentNum__c.field-meta.xml
<CustomField>
    <fullName>OfferRealEstateDocumentNum__c</fullName>
    <label>提供物件資料数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>