force-app/main/default/objects/QuestionnaireDetail__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <label>アンケート</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>アンケート詳細</relationshipLabel>
    <relationshipName>QuestionnaireDetailQuestionnaireRelation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>