force-app/main/default/objects/QuestionnaireDetail__c/fields/RealEstateCompany__c.field-meta.xml
<CustomField>
    <fullName>RealEstateCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>不動産会社</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>QuestionnaireDetailAccountRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>